Fix crash if window is closed when undoing

If dolphin is closed when undoing something,
this will crash. Set parentWidget as QPointer
to avoid crashing: Instead, the undo process
gets cancelled gracefully.

BUG:469586